--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     />
   </head>
   <body>
+    <!-- commit -->
     <section class="pricing">
       <div class="cards-wrapper">
         <section class="price-card clr-1">
