--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!-- commit -->
     <!-- test main -->
     <!-- test main 2 -->
+    <!-- feature one test -->
     <section class="pricing">
       <div class="cards-wrapper">
         <section class="price-card clr-1">
