--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <!-- commit -->
+    <!-- test main -->
     <section class="pricing">
       <div class="cards-wrapper">
         <section class="price-card clr-1">
