add test main 2

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <body>
     <!-- commit -->
     <!-- test main -->
+    <!-- test main 2 -->
     <section class="pricing">
       <div class="cards-wrapper">
         <section class="price-card clr-1">
